Many fixes, like access col, vertical alignement for footer, color of QL

--- a/styles.css
+++ b/styles.css
@@ -222,8 +222,8 @@ header nav ul li a:hover{
 }
 
 
-#access .fa-bus{
-  background-color: gray;
+#access .fa-bus, #access .fa-train{
+  background-color: #eaeaea;
   border-radius: 35px;
   color: white;
   height: 70px;
@@ -234,14 +234,7 @@ header nav ul li a:hover{
 }
 
 #access .fa-train{
-  background-color: gray;
-  border-radius: 35px;
-  color: white;
-  height: 70px;
-  width: 70px;
   padding-left: 15px;
-  padding-top: 12px;
-  font-size: 45px;
 }
 
 #access .list-group-item{
@@ -295,17 +288,26 @@ header nav ul li a:hover{
 /* QUARTIER LIBRE SECTION */
 
 #quartier-libre hr{
-    border-top:1px solid rgba(0,0,0,.5)
+    border-top:1px solid rgba(255,255,255,.5)
+}
+
+#quartier-libre h1, #quartier-libre p{
+  color : #FFF;
 }
 
 #quartier-libre img{
     max-width:272px;
     border:3px solid #fff;
     border-radius:150px;
-    box-shadow: 0 1rem 3rem rgba(0,0,0,.175)!important;
+    box-shadow: 0 1rem 3rem rgba(0,0,0,.175)!important;    
+}
+
+#quartier-libre a{
+  transition: all 0.5s;
+    color:#fff;
 }
 
 #quartier-libre a:hover{
-    color:#fff;
+  color :#212121;
     text-decoration: none;
 }
